refactor: remove deprecated backward compatibility code