@@ -146,7 +146,7 @@ class ScormVersionDetectorCoverageTest {
 
     @Override
     public List<String> listFilesInternal(String directoryPath) {
-      return Collections.emptyList();
+      return List.copyOf(files.keySet());
     }
 
     @Override
